--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
+  
   <head>
-    <title> EE</title>
+    <title>Home</title>
   </head>
+  
+  <body>
+    <p>Hehehehe</p>
+  </body>
+  
 </html>
