--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   
   <body>
-    <p>Hehehehe</p>
+    <a href=“https://alexabordeaux.github.io”><h1>Alexa Bordeaux</h1></a>
+    <h3>Tiktoker, Athlete, and Professional Breather</h3>
   </body>
   
 </html>
